# Paint

Projeto1/: CMakeLists.txt  Projeto1.sln
Projeto1/Projeto1/: DBForms.c  DBForms.h  Projeto1.vcxproj  Projeto1.vcxproj.filters  form.c  form.h  main.c
Projeto1/Projeto1/Debug/: Projeto1.exe.recipe  Projeto1.ilk  main.obj.enc  vc143.idb
Projeto1/Projeto1/Debug/Projeto1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Projeto1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Projeto1/Projeto1/x64/Debug/: vc143.idb
Projeto1/Projeto1/x64/Debug/Projeto1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Projeto1.lastbuildstate
